# webscraper

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
tests/: conftest.py  test_scraper.py
tests/mocks/: __init__.py  site.py
tests/mocks/templates/: finalpage.html  homepage.html  nextpage.html
webscraper/: __main__.py  datastore.py  definitions.py  scraper.py  settings.py  setup.py  utils.py
